# RustOnAccelerators

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
code/: launcher-rust-nvcc-cuda.sh  launcher-rust-opencl-fpga.sh  setup_rustfpga.sh  setup_rustgpu.sh
code/rust-cuda/: Cargo.toml  build.rs
code/rust-cuda/kernels/: Cargo.toml
code/rust-cuda/kernels/src/: lib.rs
code/rust-cuda/src/: maim.rs.bak  main.rs
code/rust-nvcc/: Cargo.toml  build.rs
code/rust-nvcc/kernels/: conv2d_gray_f32.cu  vec_add.cu
code/rust-nvcc/src/: main.rs
code/rust-opencl-fpga/: Cargo.toml  build.rs
code/rust-opencl-fpga/kernels/: conv2d_gray_f32.cl  my_kernel.cl
code/rust-opencl-fpga/src/: main.rs
code/rust-opencl-gpu/: Cargo.toml
code/rust-opencl-gpu/src/: main.rs
code/utils/: Cargo.toml
code/utils/src/: lib.rs
docs/: index.md  rust.md  rust_cuda.md  rust_opencl.md
docs/stylesheets/: extra.css
rust/: index.html
rust_cuda/: index.html
rust_opencl/: index.html
search/: search_index.json
